--- a/client/package.json
+++ b/client/package.json
@@ -13,31 +13,32 @@
     "tsc": "tsc"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/styles": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/styles": "^4.11.4",
     "@mdi/js": "^5.9.55",
     "@mdi/react": "^1.5.0",
     "@react-hook/resize-observer": "^1.2.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
     "axios": "^0.21.1",
     "babel-cli": "^6.26.0",
-    "babel-preset-react-app": "^3.1.2",
+    "babel-preset-react-app": "^10.0.0",
+    "browserslist": "^4.16.6",
     "history": "^5.0.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-native-svg": "^12.1.1",
     "react-native-typescript-transformer": "^1.2.13",
-    "react-native-web": "^0.16.3",
+    "react-native-web": "^0.16.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "serve": "11.3.2",
-    "web-vitals": "^1.1.1"
+    "react-scripts": "^4.0.3",
+    "serve": "^12.0.0",
+    "web-vitals": "^2.0.1"
   },
   "engines": {
     "node": ">=10.0.0"
@@ -62,22 +63,22 @@
   },
   "devDependencies": {
     "@tsconfig/create-react-app": "^1.0.2",
-    "@types/express": "^4.17.11",
-    "@types/react": "^17.0.3",
+    "@types/express": "^4.17.12",
+    "@types/react": "^17.0.11",
     "@types/react-color": "^3.0.4",
-    "@types/react-dom": "^17.0.2",
-    "@types/react-router": "^5.1.13",
+    "@types/react-dom": "^17.0.7",
+    "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "babel-plugin-react-native-web": "^0.16.3",
-    "eslint": "^7.22.0",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "babel-plugin-react-native-web": "^0.16.5",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.2"
   },
   "resolutions": {
     "react-scripts/eslint-webpack-plugin": "2.3.0"
