--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "tsc": "tsc"
   },
   "dependencies": {
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.12",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "4.17.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "eslint": "^7.22.0",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.2"
   },
   "engines": {
     "node": ">=10.0.0"
