--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "history": "^5.0.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-native-svg": "^12.1.1",
@@ -35,7 +35,7 @@
     "react-native-web": "^0.16.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "serve": "11.3.2",
     "web-vitals": "^1.1.1"
   },
