--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react-app": "^10.0.0",
     "browserslist": "^4.16.6",
     "history": "^5.0.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
@@ -65,6 +66,7 @@
   "devDependencies": {
     "@tsconfig/create-react-app": "^1.0.2",
     "@types/express": "^4.17.12",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^17.0.11",
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.7",
