--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react-app": "^10.0.0",
     "browserslist": "^4.16.6",
     "history": "^5.0.0",
+    "json-query": "^2.2.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
@@ -40,7 +41,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "serve": "^12.0.0",
-    "web-vitals": "^2.0.1"
+    "web-vitals": "^2.0.1",
+    "xml-js": "^1.6.11"
   },
   "engines": {
     "node": ">=10.0.0"
@@ -66,6 +68,7 @@
   "devDependencies": {
     "@tsconfig/create-react-app": "^1.0.2",
     "@types/express": "^4.17.12",
+    "@types/json-query": "^2.2.6",
     "@types/lodash": "^4.14.202",
     "@types/react": "^17.0.11",
     "@types/react-color": "^3.0.4",
