--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "serve": "^12.0.0",
-    "web-vitals": "^2.0.1",
-    "xml-js": "^1.6.11"
+    "web-vitals": "^2.0.1"
   },
   "engines": {
     "node": ">=10.0.0"
